--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,64 +1,45 @@
-<div class="col-md-6">
-
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h3 class="panel-title">Da-Burgers</h3>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12 text-center" id="top-bar">
+            <img src="/assets/images/burger.png" alt="burger" />
+            <h1>Welcome to Eat-Da-Burger! </h1>
         </div>
-
-        <div class="panel-body">
-            {{#each result}}
-                {{#if this.devour}}
-                    <ul>
-                        <div class="list">
-                            <li>{{burger_name}}</li>
-                            <form action="/{{this.id}}?_method=PUT" method="POST">
-                                <button type="submit" class="btn btn-default">Devour</button>
-                            </form>
-
-                        </div>
-                    </ul>
-                {{/if}}
-
-            {{/each}}
-
-            <form action="/add?_method=PUT" method="POST">
-                <textarea type="text" name="burger_name"  cols="30" rows="10"></textarea> <br>
-                <button type="submit" class="btn btn-default"> Submit</button>
-            </form>
-        </div>
-
-    </div>
-</div>
-
-<div class="col-md-6">
-
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h3 class="panel-title">Devour</h3>
-        </div>
-
-        <div class="panel-body">
-            {{#each result}}
+        <div class="col-xs-6 text-center" class="task">
+            <div class="row">
+              {{#each burger_data}}
                 {{#unless this.devour}}
-                    <ul>
-                        <div class="list">
-                            <li>{{burger_name}}</li>
-
-                            <button class="btn btn-default">Devour</button>
-
-                        </div>
-                    </ul>
+                <div class="col-xs-9 text-center">
+                    <pre>{{this.id}}. {{this.burger_name}}
+                    </pre>
+                        <!-- {{this.Date}} -->
+                </div>
+                <div class="col-xs-3 text-center">
+                    <form method="POST" action="/burgers/update?_method=PUT" class="button-size">
+                        <input input type="hidden" type="text" name="burger_id" value={{this.id}}><br>
+                        <button type="submit" class="btn btn-default">Devour it!</button>
+                    </form>
+                </div>
                 {{/unless}}
-
-            {{/each}}
+              {{/each}}
+            </div>
         </div>
-
+        <div class="col-xs-6 text-center" class="task">
+              {{#each burger_data}}
+                {{#if this.devour}}
+                    <input class="form-control" type="text" placeholder="{{this.id}} . {{this.burger_name}}" readonly>
+                {{/if}}
+              {{/each}}
+        </div>
     </div>
-
 </div>
-
-
-
-
-
-
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12 text-center enter_section">
+            <form action="/burgers/create" method="POST">
+                <input type="text" class="form-control" name="burger_name" value="" id="enter_text">
+                <button type="submit" class="btn btn-primary" id="text-enter-button">Submit</button>
+            </form>
+            <p>Select your burger and Click the "Submit" button.</p>
+        </div>
+    </div>
+</div>
